--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   web:
     image: nginx
-    ports: 
+    ports-server: 
       - "8080:80"
 
-    app:
+    app-server:
       image: tomcat:9.0.12
       ports:
         - "8888:8080"
