--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports-server: 
       - "8080:80"
 
-    app-server:
-      image: tomcat:9.0.12
-      ports:
-        - "8888:8080"
+  app:
+    image: tomcat:9.0.12
+    ports:
+      - "8888:8080"
